--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-appconf==1.0.2
 django-compressor==2.2
 django-environ==0.4.4
 djangorestframework==3.7.1
+Pygments==2.2.0
 python-dotenv==0.7.1
 pytz==2017.2
 rcssmin==1.0.6
